trunk/Archive2/cf/1754d742c648b6/output
main.cpp:12:17: error: variable has incomplete type 'A::X'
    void g(A::X x) {
                ^
main.cpp:2:14: note: forward declaration of 'A::X'
      struct X;
             ^
main.cpp:12:17: warning: unused parameter 'x' [-Wunused-parameter]
    void g(A::X x) {
                ^
main.cpp:16:17: error: variable has incomplete type 'A::Y'
    void h(A::Y y) {
                ^
main.cpp:3:14: note: forward declaration of 'A::Y'
      struct Y;
             ^
main.cpp:16:17: warning: unused parameter 'y' [-Wunused-parameter]
    void h(A::Y y) {
                ^
2 warnings and 2 errors generated.
